fixed logo inversion and chrome dark mode

--- a/panda-pos/src/app/page.module.css
+++ b/panda-pos/src/app/page.module.css
@@ -86,10 +86,5 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
-}
 
 
